2.1.0/_sources/gallery/userdemo/annotate_simple02.rst.txt


.. _sphx_glr_gallery_userdemo_annotate_simple02.py:


=================
Annotate Simple02
=================





.. image:: /gallery/userdemo/images/sphx_glr_annotate_simple02_001.png
    :align: center





.. code-block:: python

    import matplotlib.pyplot as plt


    fig, ax = plt.subplots(figsize=(3, 3))

    ax.annotate("Test",
                xy=(0.2, 0.2), xycoords='data',
                xytext=(0.8, 0.8), textcoords='data',
                size=20, va="center", ha="center",
                arrowprops=dict(arrowstyle="simple",
                                connectionstyle="arc3,rad=-0.2"),
                )

    plt.show()

**Total running time of the script:** ( 0 minutes  0.017 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: annotate_simple02.py <annotate_simple02.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: annotate_simple02.ipynb <annotate_simple02.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
