3.0.0/_sources/gallery/userdemo/annotate_simple02.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_userdemo_annotate_simple02.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_userdemo_annotate_simple02.py:


=================
Annotate Simple02
=================





.. image:: /gallery/userdemo/images/sphx_glr_annotate_simple02_001.png
    :class: sphx-glr-single-img





.. code-block:: python

    import matplotlib.pyplot as plt


    fig, ax = plt.subplots(figsize=(3, 3))

    ax.annotate("Test",
                xy=(0.2, 0.2), xycoords='data',
                xytext=(0.8, 0.8), textcoords='data',
                size=20, va="center", ha="center",
                arrowprops=dict(arrowstyle="simple",
                                connectionstyle="arc3,rad=-0.2"),
                )

    plt.show()


.. _sphx_glr_download_gallery_userdemo_annotate_simple02.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: annotate_simple02.py <annotate_simple02.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: annotate_simple02.ipynb <annotate_simple02.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
